# ICFPC2020

./: .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  build.sh  docker-compose.yml  package-lock.json  run.sh  webpack.config.js
.devcontainer/: devcontainer.json  docker-compose.yml
ai/: yuusti.h
amylase/: curry.py  curry_lib.scm  pair.py
app/: ai.h  battledome.cpp  client.h  command.h  game.h  local_run.sh  main.cpp  main.py  main.rb  modem.h  value.h
batch-image/: run.sh  ssh_config
batch_image/: Dockerfile  (+2 more)
manarimo/: Cargo.toml  Procfile  a.out  galaxy.txt  package-lock.json  package.json  requirements.txt  test.sh  tsconfig.json  webpack.config.js
manarimo/manaburn/: main.py
manarimo/misc/: desc.py  orbit.py
manarimo/sql/: 01_init.sql  02_local_runs.sql  03_games.sql  04_played_at.sql  05_submissions.sql
manarimo/src/: compile.py  curl.py  dem.py  disasm.py  gamestate.py  interact.py  main.py  main.rs  mod.py  rt.py  send.py
manarimo/web/: App.tsx  index.html  index.tsx
manarimo/web/components/: CanvasBoard.tsx
manarimo/web/pages/: AlienSend.tsx  BattleDome.tsx  BattlePlayer.tsx  GameList.tsx  HistoryList.tsx  LocalGameList.tsx  ReplayList.tsx
manarimo/web/pages/BattlePlayer/: BattlePlayer.tsx  BattleViewer.tsx
manarimo/web/pages/GameList/: GameTable.tsx
manarimo/web/pages/SavedBattleList/: GameSearchTable.tsx  SavedBattleList.tsx
manarimo/web/pages/Visualizer/: CanvasBoard.tsx  Visualizer.tsx
manarimo/web/test/: db.json  middleware.js
manarimo/web/types/: index.ts
manarimo/web/util/: CommandParser.tsx  ImageParser.ts
(+42 files in other folders)
